--- a/donate.html
+++ b/donate.html
@@ -76,6 +76,17 @@ weight: 5
 <a id="aPayAmount" href="javascript:void()" class="btn btn-large btn-success">捐 助</a>
 </div>
 </div>
+<div style="float: left;width: 100%;">
+<hr>
+<h4>感谢以下朋友</h4>
+<hr>
+<table class="table table-bordered">
+<tr><th>序号</th><th>姓名</th><th>邮箱</th><th>交易号</th><th>日期</th></tr>
+<tr><td>1</td><td>**友</td><td>puj***@163.com</td><td>**********************608696</td><td>2012-12-29</td></tr>
+<tr><td>2</td><td>*松</td><td>hen***@163.com</td><td>**********************377253</td><td>2012-12-29</td></tr>
+<tr><td>3</td><td>*兵</td><td>xia***@163.com</td><td>**********************475128</td><td>2012-12-29</td></tr>
+</table>
+</div>
 <form id="formOther" action="https://shenghuo.alipay.com/send/payment/fill.htm" method="post" target="_blank">
 	<input type="hidden" name="optEmail" value="xphelper@163.com"/>
 </form>
