--- a/donate.html
+++ b/donate.html
@@ -76,9 +76,14 @@ weight: 5
 <a id="aPayAmount" href="javascript:void()" class="btn btn-large btn-success">捐 助</a>
 </div>
 </div>
+<div style="float: left;width: 100%;font-weight: bold;color: red;">
+注：<br>
+1.捐赠时，【收款人手机号码】填写您的号码，或者随意填写。<br>
+2.捐赠后，将您的12306登录名和【交易号】发送至xphelper@163.com，以便为您开通【捐赠版】。
+</div>
 <div style="float: left;width: 100%;">
 <hr>
-<h3>感谢以下朋友</h3>
+<h3>感谢以下同学</h3>
 <table class="table table-bordered">
 <tr><th>序号</th><th>姓名</th><th>邮箱</th><th>交易号</th><th>日期</th></tr>
 <tr><td>1</td><td>**友</td><td>puj***@163.com</td><td>**********************608696</td><td>2012-12-29</td></tr>
