--- a/donate.html
+++ b/donate.html
@@ -85,11 +85,13 @@ weight: 5
 <hr>
 <h3>感谢以下同学</h3>
 <table class="table table-bordered">
-<tr><th>序号</th><th>姓名</th><th>邮箱</th><th>交易号</th><th>日期</th></tr>
+<tr><th>序号</th><th>姓名</th><th>支付宝账户</th><th>交易号</th><th>日期</th></tr>
 <tr><td>1</td><td>**友</td><td>puj***@163.com</td><td>**********************608696</td><td>2012-12-29</td></tr>
 <tr><td>2</td><td>*松</td><td>hen***@163.com</td><td>**********************377253</td><td>2012-12-29</td></tr>
 <tr><td>3</td><td>*兵</td><td>xia***@163.com</td><td>**********************475128</td><td>2012-12-29</td></tr>
 <tr><td>4</td><td>*波</td><td>616***@qq.com</td><td>**********************216617</td><td>2013-01-03</td></tr>
+<tr><td>5</td><td>*忠</td><td>130****1158</td><td>**********************712618</td><td>2013-01-04</td></tr>
+<tr><td>6</td><td>*彬</td><td>130****5073</td><td>**********************324679</td><td>2013-01-04</td></tr>
 </table>
 </div>
 <form id="formOther" action="https://shenghuo.alipay.com/send/payment/fill.htm" method="post" target="_blank">
