add donate user

--- a/donate.html
+++ b/donate.html
@@ -92,6 +92,8 @@ weight: 5
 <tr><td>4</td><td>*波</td><td>616***@qq.com</td><td>**********************216617</td><td>2013-01-03</td></tr>
 <tr><td>5</td><td>*忠</td><td>130****1158</td><td>**********************712618</td><td>2013-01-04</td></tr>
 <tr><td>6</td><td>*彬</td><td>130****5073</td><td>**********************324679</td><td>2013-01-04</td></tr>
+<tr><td>7</td><td>*松</td><td>hen***@163.com</td><td>**********************812012</td><td>2013-01-07</td></tr>
+<tr><td>8</td><td>*兵</td><td>xia***@163.com</td><td>**********************930969</td><td>2013-01-08</td></tr>
 </table>
 </div>
 <form id="formOther" action="https://shenghuo.alipay.com/send/payment/fill.htm" method="post" target="_blank">
