--- a/donate.html
+++ b/donate.html
@@ -81,7 +81,7 @@ weight: 5
 1.捐赠时，【收款人手机号码】填写您的号码，或者随意填写。<br>
 2.捐赠后，将您的12306登录名和【交易号】发送至xphelper@163.com，以便为您开通【捐赠版】。
 </div>
-<div style="float: left;width: 100%;">
+<div style="float: left;width: 100%;display:none;">
 <hr>
 <h3>感谢以下同学</h3>
 <table class="table table-bordered">
