--- a/donate.html
+++ b/donate.html
@@ -77,9 +77,9 @@ weight: 5
 </div>
 </div>
 <div style="float: left;width: 100%;font-weight: bold;color: red;">
-注：<br>
+温馨提示：<br>
 1.捐赠时，【收款人手机号码】填写您的号码，或者随意填写。<br>
-2.捐赠后，将您的12306登录名和【交易号】发送至xphelper@163.com，以便在第二天为您开通【捐赠版】。
+2.使用手机客户端捐赠，可以省下支付宝的手续费。
 </div>
 <div style="float: left;width: 100%;display:none;">
 <hr>
