--- a/404.html
+++ b/404.html
@@ -1,1 +1,19 @@
-Sorry this page does not exist =(
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>很抱歉，您查看的页面找不到了！</title>
+</head>
+<body>
+    <h2>
+        很抱歉，您查看的页面找不到了！</h2>
+    <div>
+        <p>
+            您可以：</p>
+        <ol>
+            <li>检查刚才的输入</li>
+            <li>去其他地方逛逛：<a href="http://www.xphelper.com/">网站首页</a>|<a href="http://www.xphelper.com/download.html">最新下载</a>|<a
+                href="http://www.xphelper.com/donate.html">捐赠我们</a> </li>
+        </ol>
+    </div>
+</body>
+</html>
