--- a/donate.html
+++ b/donate.html
@@ -38,6 +38,7 @@ weight: 5
                     }
 					jQuery("#payAmount").val(v);
                     ChangeLi("li2", v, 10);
+					ChangeLi("li7", v, 15);
                     ChangeLi("li3", v, 30);
                     ChangeLi("li4", v, 50);
                     ChangeLi("li5", v, 70);
@@ -57,7 +58,7 @@ weight: 5
 </div>
 <div style="width: 100%;margin-bottom: 15px;">
 	捐助
-	<span style="display: inline-block; width: 400px; padding: 0 5px;"><input id="SliderSingle" type="slider" name="price" value="10" /></span>
+	<span style="display: inline-block; width: 400px; padding: 0 5px;"><input id="SliderSingle" type="slider" name="price" value="15" /></span>
 	人民币。<a id="aOther" href="javascript:void()">捐助其他金额</a>
 </div>
 <div>
@@ -65,6 +66,7 @@ weight: 5
 	<ul>
 		<li id="li1">您会收到一封感谢信，您的大恩大德我们铭记于心。</li>
 		<li id="li2">您可以提交bug，我会在第一时间将其修复</li>
+		<li id="li7">您就有机会获取邀请码 <a href="invite.html">如何获取邀请码？</a></li>
 		<li id="li3">您可以提出一个你想要的功能，我会尽力将其实现！(不要提不现实的功能 :P )</li>
 		<li id="li4">如果我们相遇，我请您喝点心！</li>
 		<li id="li5">你真好！来，请您喝啤酒！啤酒爽歪歪！</li>
